refactor(service): use Stream.toList in ArmorSortingService