@@ -6,7 +6,6 @@ import main.java.com.witcher.validation.InputValidator;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ArmorSortingService {
     private final InputValidator validator;
@@ -17,13 +16,13 @@ public class ArmorSortingService {
     public List<Armour> sortByWeight(List<Armour> inventory) {
         return inventory.stream()
                 .sorted(Comparator.comparing(Armour::getWeight))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Armour> sortByPrice(List<Armour> inventory) {
         return inventory.stream()
                 .sorted(Comparator.comparing(Armour::getPrice))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -31,7 +30,7 @@ public class ArmorSortingService {
         validator.validatePriceRange(minPrice, maxPrice);
         return inventory.stream()
                 .filter(armor -> armor.getPrice() >= minPrice && armor.getPrice() <= maxPrice)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
